# image-annotation-react

./: .gitignore  README.md
backend/: Dockerfile  app.py  pyproject.toml
backend/models/: __init__.py  models.py
backend/routes/: __init__.py  annotation.py  auth.py  image.py  task.py
frontend/: package-lock.json  package.json
frontend/src/: store.js
frontend/src/actions/: constants.js  index.js
frontend/src/components/: ControlPanel.jsx  ControlPanel.module.css  ControlPanel.module.scss  ImageComponent.jsx  ImageComponent.module.scss  Modal.jsx  Modal.module.scss  ModalForm.jsx  ModalForm.module.scss
frontend/src/pages/: Home.module.css  _app.js  index.js
frontend/src/reducers/: controlPanelReducer.js  imageViewerReducer.js
